Modifica per implementazione java 1.8 + spring 2.7.18 + stateless